source/docker/gpu/nvidia_p4_pi_docker/make.log
CONFTEST: ib_peer_memory_symbols
  CC [M]  /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-platform.o
  CC [M]  /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-dsi-parse-panel-props.o
  CC [M]  /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-bpmp.o
  CC [M]  /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-gpio.o
In file included from /var/lib/dkms/nvidia/575.57.08/build/common/inc/conftest.h:28,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:29,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/os-interface.h:40,
                 from /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-dsi-parse-panel-props.c:26:
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:77:2: error: #error dma_buf_export() conftest failed!
   77 | #error dma_buf_export() conftest failed!
      |  ^~~~~
In file included from /var/lib/dkms/nvidia/575.57.08/build/common/inc/conftest.h:28,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:29,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/os-interface.h:40,
                 from /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-bpmp.c:26:
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:77:2: error: #error dma_buf_export() conftest failed!
   77 | #error dma_buf_export() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:94:2: error: #error radix_tree_replace_slot() conftest failed!
   94 | #error radix_tree_replace_slot() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:94:2: error: #error radix_tree_replace_slot() conftest failed!
   94 | #error radix_tree_replace_slot() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:33:14: fatal error: stdarg.h: No such file or directory
   33 |     #include <stdarg.h>
      |              ^~~~~~~~~~
/var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:33:14: fatal error: stdarg.h: No such file or directory
   33 |     #include <stdarg.h>
      |              ^~~~~~~~~~
compilation terminated.
compilation terminated.
make[3]: *** [/usr/src/linux-headers-6.6.51+rpt-common-rpi/scripts/Makefile.build:248: /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-dsi-parse-panel-props.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[3]: *** [/usr/src/linux-headers-6.6.51+rpt-common-rpi/scripts/Makefile.build:248: /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-bpmp.o] Error 1
In file included from /var/lib/dkms/nvidia/575.57.08/build/common/inc/conftest.h:28,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:29,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/os-interface.h:40,
                 from /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-gpio.c:26:
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:77:2: error: #error dma_buf_export() conftest failed!
   77 | #error dma_buf_export() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:94:2: error: #error radix_tree_replace_slot() conftest failed!
   94 | #error radix_tree_replace_slot() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:33:14: fatal error: stdarg.h: No such file or directory
   33 |     #include <stdarg.h>
      |              ^~~~~~~~~~
compilation terminated.
make[3]: *** [/usr/src/linux-headers-6.6.51+rpt-common-rpi/scripts/Makefile.build:248: /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-gpio.o] Error 1
In file included from /var/lib/dkms/nvidia/575.57.08/build/common/inc/conftest.h:28,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:29,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv.h:41,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv-linux.h:28,
                 from /var/lib/dkms/nvidia/575.57.08/build/common/inc/nv-platform.h:27,
                 from /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-platform.c:32:
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:77:2: error: #error dma_buf_export() conftest failed!
   77 | #error dma_buf_export() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/conftest/functions.h:94:2: error: #error radix_tree_replace_slot() conftest failed!
   94 | #error radix_tree_replace_slot() conftest failed!
      |  ^~~~~
/var/lib/dkms/nvidia/575.57.08/build/common/inc/nv_stdarg.h:33:14: fatal error: stdarg.h: No such file or directory
   33 |     #include <stdarg.h>
      |              ^~~~~~~~~~
compilation terminated.
make[3]: *** [/usr/src/linux-headers-6.6.51+rpt-common-rpi/scripts/Makefile.build:248: /var/lib/dkms/nvidia/575.57.08/build/nvidia/nv-platform.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.6.51+rpt-common-rpi/Makefile:1946: /var/lib/dkms/nvidia/575.57.08/build] Error 2
make[1]: *** [/usr/src/linux-headers-6.6.51+rpt-common-rpi/Makefile:246: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.6.51+rpt-rpi-2712'
make: *** [Makefile:140: modules] Error 2
